--- a/templates/telalogin.html
+++ b/templates/telalogin.html
@@ -2,12 +2,14 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login do Gerente</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-
+    <title>Login JTech</title>
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="icon" type="image/png" href="../static/img/icon.png">
     <style>
-        body {
+        /* body {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -39,12 +41,12 @@
 
         div{
             line-height: 20px;
-        }
+        } */
        
     </style>
 </head>
 <body>
-    <img class="Imglogo" src="{{ url_for('static', filename='imagens/jornadatechimg.png') }}" alt="logo Criada para Jornada Tech">
+    <img class="Imglogo" src="{{ url_for('static', filename='img/jtech_img.png') }}" alt="logo Criada para Jornada Tech">
     <br>
 
         <div>
@@ -57,38 +59,8 @@
             </label>
         </div>
             <button class="btncss" type="button" id="login-button">Entrar</button>
-    <script>
-       
-        const usersData = [
-            { username: "Manhani", password: "nanami" },
-            { username: "LEHpex", password: "felipe" },
-            { username: "wiu", password: "wiu" }
-        ];
-
-        document.getElementById("login-button").addEventListener("click", function() {
-            logar();
-        });
-
-        document.getElementById("password").addEventListener("keydown", function(event) {
-            if (event.key === "Enter") {
-                logar();
-            }
-        });
-
-        function logar() {
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
-
-            const user = usersData.find(user => user.username === username && user.password === password);
-
-            if (user) {
-                alert("Login bem-sucedido!");
-                window.location.href = "dashboardhome";
-            } else {
-                alert("Usuário ou senha incorretos. Tente novamente.");
-            }
-        }
-                
-    </script>
+    
+    <script src="../static/bootstrap/js/bootstrap.bundle.min.js"> </script>
+    <script src="../static/script.js"> </script>
 </body>
 </html>
