--- a/templates/dashboardhome.html
+++ b/templates/dashboardhome.html
@@ -6,7 +6,7 @@
     <title>Inicio</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='reset.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='cssGeral.css') }}">
-    <script type="text/javascript" type="text/css" src="{{ url_for('static', filename='menu.js') }}"/>
+    <script type="text/javascript" type="text/css" src="{{ url_for('static', filename='menu.js') }}">
 </head>
 <body>
     <div id="menu">
