--- a/static/style.css
+++ b/static/style.css
@@ -74,5 +74,36 @@ html, body {
 }
 
 #main {
+    width: 80%;
+    height: 100%;
+    position: fixed;
     margin-left: 300px;
+    padding-left: 10px;
+    /* border: 5px solid #f00707; */
+}
+
+.header-div {
+    display: flexbox;
+    width: 100%;
+    /* border: 5px solid #444; */
+}
+
+.header-div img{
+    /* border: 5px solid #5F94D9; */
+    width: 120px;
+    right: 0;
+}
+
+.header-div .container{
+    /* border: 5px solid #0fcf79; */
+    display: block;
+}
+
+#main h1 {
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    text-align: center;
+    color: #000;
 }
