--- a/templates/cadastrocartao.html
+++ b/templates/cadastrocartao.html
@@ -1,42 +1,22 @@
 {%extends "home.html"%}
 {%block content%}
     <div class="divContainer">
-        <nav class="barraLateral">
-            <img class="logoJtechBL" src="{{ url_for('static', filename='imagens/J.Tech Logo Branco.svg') }}"  alt="Logo Jornada Tech Branco">
-        <div class="div-redonda">
-            <img src="{{ url_for('static', filename='imagens/perfil.jpg') }}" alt="Foto de Perfil">
-            <h2 class="h4" style="text-align: center; color: white; padding-top: 24px;">Gerente Carlos</h2>
-        </div>
-        <div class="movebutton">
-        <button class="buttonMenu" onclick="window.location.href='visualizarfatura'">Clientes</button>
-        <button class="selectedButtonMenu" onclick="window.location.href='listacartao'">Cartões</button>
-        <button class="buttonMenu" onclick="window.location.href='cadastracompras'">Compras</button>
-        <button class="buttonMenu" onclick="window.location.href='relatoriodegastos'">Relatórios</button>
-        </div>
-    </nav>
-        <div class="div1">
-            <h1 class="h1" style="text-align: center;">CADASTRAR CARTÕES</h1>
-            <form>
-                <div class="form-container">
-                    <div class="form-column">
-                        <div class="form-group">
-                            <label class="h4" for="Name"> Nome</label>
-                        <input type="text" id="Name" name="Name">
-                    </div>
+            <h1 style="text-align: center;">Cadastrar Cartão de Crédito</h1>
+            <form method="post">
+                <div class="mb-3">
+                    <label for="exampleInputNome" class="form-label">Nome</label>
+                    <input type="text" class="form-control" name="txtNome" id="exampleInputNome" aria-describedby="nameHelp">
+                    <div id="nameHelp" class="form-text">Informe o nome do cliente</div>
                 </div>
-                <label class="text-between text" class> R$ </label>
-                <div class="form-column">
-                    <div class="form-group">
-                        <label class="h4" for="Limite">Limite</label>
-                        <input type="number" id="limite" name="limite">
-                    </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">R$</span>
+                    <input type="text" class="form-control" name= "txtLimite" aria-label="Valor do limite do cliente">
+                    <span class="input-group-text">.00</span>
+                  </div>
+                <div>
+                    <button class="btn btn-primary" type="submit">Cadastrar</button>
+                    <button class="btn btn-danger" type="reset">Cancelar</button>
                 </div>
-                <div class="formButton">
-                    <button class="buttonCancel" style="color: white;" type="reset">Cancelar</button>
-                    <button class="button" style="color: white;" type="submit">Cadastrar</button>
-                </div>
-            </div>
-        </form>
+            </form>
     </div>
-</div>
 {%endblock%}
